--- a/static/css/chess_new_game.css
+++ b/static/css/chess_new_game.css
@@ -5,10 +5,29 @@
     font-size: 32px;
 }
 html {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+body {
+    width: 100%;
+    height: 100%;
+    position: static;
+}
+.background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background-image: url('../images/newgame_background.jpg');
     background-position: center;
-    background-repeat: none;
     background-size: cover;
+    opacity: 1;
+    
 }
 .field {
     width: 16em;
@@ -16,7 +35,7 @@ html {
     margin-right: auto;
     height: 16em;
     position: relative;
-    margin-top: 3em;
+    margin-top: 2.5em;
 }
 .table {
     position: absolute;
@@ -188,9 +207,262 @@ html {
     background-image: url('../images/white_pawn.png');
 }
 
-.right-slide {
+.side-bar{
+    position: absolute;
     right: 0;
-    width: 10%;
+    top: 0;
+    width: 3%;
     height: 100%;
-    background-color: #d18b47;
+    transition: width 1s;
+    color: white;
+}
+.left-expand {
+    position: absolute;
+    width: 3vw;
+    height: 1.2em;
+    top: 50%;
+    left: 0;
+    background-image: url("../images/left_expand.png");
+    background-position: left center;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    
+}
+.side-menu {
+    position: absolute;
+    bottom: 0;
+
+    margin-bottom: 2vh;
+    height: 40%;
+    width: 100%;
+    
+
+}
+.finish-game{
+    width: auto;
+    height: 25%;
+    margin: 3.5vh 3.3vw;
+    margin-right: 3vw;
+    background-image: url("../images/finish.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    cursor: pointer;
+}
+.finish-game:hover {
+    margin-left : 3.1vw;
+    margin-right: 2.8vw;
+    margin-top: 3.5vh;
+    margin-bottom: 3.3vh;
+}
+.settings {
+    width: auto;
+    height: 20%;
+    margin: 3.5vh 3.3vw;
+    
+    
+    background-image: url("../images/settings.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    cursor: pointer;
+}
+.settings:hover {
+    margin : 0 0;
+    width: auto;
+}
+.exit {
+    width: auto;
+    height: 20%;
+    margin: 3.5vh 3.3vw;
+    margin-right: 2.4vw;
+    
+    background-image: url("../images/exit.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    cursor: pointer;
+}
+.exit:hover {
+    margin : 3.5vh 0;
+    margin-left: 0.9vw;
+    height: 22%;
+    width: auto;
+}
+.pop-up-finish-game {
+    position: absolute;
+    top:25%;
+    bottom: 25%;
+    left:25%;
+    right:25%;
+    width: auto;
+    height: auto;
+    display: none;
+    border-radius: 2vw;
+    padding: 3vw;
+    padding-top: 8vw;
+    line-height: 150%;
+    background-image: url("../images/pop_up_background.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 10px 10px 6px black;
+    color: white;
+}
+.pop-up-top {
+    position: absolute;
+    border-top-left-radius: 2vw;
+    border-top-right-radius: 2vw;
+    top : 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 20%;
+    background-color: black;
+    
+}
+.pop-up-settings {
+    position: absolute;
+    top:25%;
+    bottom: 25%;
+    left:25%;
+    right:25%;
+    width: auto;
+    height: auto;
+    display: none;
+    border-radius: 2vw;
+    padding: 3vw;
+    padding-top: 8vw;
+    line-height: 150%;
+    background-image: url("../images/pop_up_background.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 10px 10px 6px black;
+    color: white;
+    
+}
+.pop-up-saved , .pop-up-success{
+    position: absolute;
+    top:25%;
+    bottom: 25%;
+    left:25%;
+    right:25%;
+    width: auto;
+    height: auto;
+    display: none;
+    border-radius: 2vw;
+    line-height: 150%;
+    background-image: url("../images/pop_up_background.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 10px 10px 6px black;
+    color: white;
+}
+.pop-up-success {
+    top: 42%;
+    bottom: 42%;
+    text-align: center;
+    padding-top: 0.8em;
+    box-shadow: 0px 0px;
+}
+.new-game {
+    position: absolute;
+    top : 10%;
+    left: 1em;
+    right : 1em;
+    height : auto;
+    font-size: 18px;
+    margin-left: 0.75em;
+    padding: 1em;
+    border: 2px solid white;
+    border-radius: 8px;
+    text-align: center;
+    display: none;
+    color : white;
+}
+.save-game {
+    position: absolute;
+    top : 25%;
+    left: 1em;
+    right : 1em;
+    height : auto;
+    font-size: 18px;
+    margin-left: 0.75em;
+    padding: 1em;
+    border: 2px solid white;
+    border-radius: 8px;
+    text-align: center;
+    display: none;
+}
+.new-game:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+.save-game:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
+.rows {
+    position: absolute;
+    width: 100%;
+    height: 80%;
+    top: 20%;
+}
+
+.row1, .row2, .row3{
+    height : 33%;
+    width : 100%;
+    position: relative;
+}
+.row1 #player1 , .row2 #gamename{
+    position: absolute;
+    display: inline-block;
+    top: 0.25em;
+    left: 2em;
+    margin:0.5em;
+    width : 35%;
+    border-radius: 8px;
+    padding: 14px;
+    font-size: 20px;
+}
+.row1 #player2, .row2 #descr{
+    position: absolute;
+    display: inline-block;
+    top: 0.25em;
+    right: 2em;
+    margin: 0.5em;
+    width: 35%;
+    border-radius: 8px;
+    padding: 14px;
+    font-size: 20px;
+}
+.row3 #clearbtn, .row3 #submitbtn {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    right : 1em;
+    padding: 3px;
+    border: 0px;
+    border-radius: 10px;
+    background-color: green;
+    opacity: 0.9;
+    color: white;
+    font-size: 20px;
+    padding: 12px;
+    box-shadow: 2px 2px 10px black;
+    cursor: pointer;
+    width : 15%;
+}
+.row3 #clearbtn {
+    right : 20%;
+    background-color: blue;
+}
+#clearbtn:active, #submitbtn:active {
+    opacity: 1;
+    box-shadow: 2px 2px 0px black;
 }
