--- a/templates/chess_new_game.html
+++ b/templates/chess_new_game.html
@@ -77,16 +77,18 @@
             <div class="square64 square"></div>
         </div>
     </div>
-
+    <div class="left-side">
+        <div class="top-side">Game Turn</div>
+        <div class="center-side"></div>
+    </div>
     <div class="side-bar">
         <a href="/new_game"><div class="new-game">New Game</div></a>
         <div class="save-game">Save Game</div>
         <div class="left-expand"></div>
         <div class="side-menu">
-            <div class="finish-game"></div>
-            <div class="settings"></div>
+            <div class="finish-game">Score Table</div>
             <a href="/">
-                <div class="exit"></div>
+                <div class="exit">Exit</div>
             </a>
         </div>
     </div>
