--- a/templates/chess_saved_games.html
+++ b/templates/chess_saved_games.html
@@ -4,23 +4,95 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/css/chess_saved_games.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <div class="top">
-            <!-- header -->
-        </div>
+        <div class="top">Saved Games</div>
         <div class="center">
-            <!-- add saved games -->
+            <div class="rows">
+                <div class="parameters">
+                    <div class="col1">PLAYER 1 NAME</div>
+                    <div class="col2">PLAYER 2 NAME</div>
+                    <div class="col3">GAME NAME</div>
+                    <div class="col4">DESCRIPTION</div>
+                    <div class="col5">PLAY - DELETE</div>
+                </div>
+                <div class="row">
+                    <div class="col1">
+                        <div class="order"></div>
+                    </div>
+                    <div class="col2"></div>
+                    <div class="col3"></div>
+                    <div class="col4"></div>
+                    <div class="col5">
+                        <input type="button" name="play" class="playBtn" style="display: none;">
+                        <input type="button" name="delete" class="deleteBtn" style="display: none;">
+                    </div>
+                </div>   
+                <div class="row">
+                    <div class="col1">
+                        <div class="order"></div>
+                    </div>
+                    <div class="col2"></div>
+                    <div class="col3"></div>
+                    <div class="col4"></div>
+                    <div class="col5">
+                        <input type="button" name="play" class="playBtn" style="display: none;">
+                        <input type="button" name="delete" class="deleteBtn" style="display: none;">
+                    </div>
+                </div>        
+                <div class="row">
+                    <div class="col1">
+                        <div class="order"></div>
+                    </div>
+                    <div class="col2"></div>
+                    <div class="col3"></div>
+                    <div class="col4"></div>
+                    <div class="col5">
+                        <input type="button" name="play" class="playBtn" style="display: none;">
+                        <input type="button" name="delete" class="deleteBtn" style="display: none;">
+                    </div>
+                </div>         
+                <div class="row">
+                    <div class="col1">
+                        <div class="order"></div>
+                    </div>
+                    <div class="col2"></div>
+                    <div class="col3"></div>
+                    <div class="col4"></div>
+                    <div class="col5">
+                        <input type="button" name="play" class="playBtn" style="display: none;">
+                        <input type="button" name="delete" class="deleteBtn" style="display: none;">
+                    </div>
+                </div>  
+                <div class="row">
+                    <div class="col1">
+                        <div class="order"></div>
+                    </div>
+                    <div class="col2"></div>
+                    <div class="col3"></div>
+                    <div class="col4"></div>
+                    <div class="col5">
+                        <input type="button" name="play" class="playBtn" style="display: none;">
+                        <input type="button" name="delete" class="deleteBtn" style="display: none;">
+                    </div>
+                </div>        
+            </div>    
         </div>
         <div class="bottom">
             <div class="pagination">
-                <div class="prev"></div>
-                <div class="next"></div>
+                <div class="prev"><i class="fa fa-angle-double-left" style="font-size:24px"></i></div>
+                <div class="next"><i class="fa fa-angle-double-right" style="font-size:24px"></i></div>
             </div>
-            <a href="/"><div class="back-btn"></div></a>
+            <a href="/"><div class="back-btn">Back</div></a>
         </div>
     </div>
+
+    
+
+    <script src="../static/js/chess_saved_games.js"></script>
 </body>
 </html>
